Fix #190 número de serie sobresale (https://tree.taiga.io/project/ereuseorg-devicehub/issue/190): Added break-word word wrapping to selection details content

--- a/app/common/components/resource/resource-list/resource-list.directive.sass
+++ b/app/common/components/resource/resource-list/resource-list.directive.sass
@@ -317,6 +317,8 @@
             color: #333333
       .selection-details-content
         padding: 15px
+        *
+          word-wrap: break-word
         .btn-hide-details
           float: left
           padding: 4px 10px
